--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,5 @@
 
 h1,
 p {
-  /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-  font-family: Inter;
+  font-family: Inter, system-ui, sans-serif;
 }
